bug 60494 - only request the max width of the innner table if it is requested of the outer table. sr=buster, r=peterl.